tests/compile_fail/attribute_already_declared.stderr
error: This attribute is already declared.
 --> tests/compile_fail/attribute_already_declared.rs:5:12
  |
5 | #[attr(pub a: usize)]
  |            ^

error: This attribute is already declared.
  --> tests/compile_fail/attribute_already_declared.rs:17:9
   |
17 |     pub b: Option<usize>,
   |         ^
